<resources>
    <string name="app_name">inSure Auto</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="claims_details">Your Claims</string>
    <string name="new_claim">New Claim</string>
    <string name="customer_info">Customer Info</string>
    <string name="back">Back</string>
    <string name="claim_history">Your Claims</string>
    <string name="messages">Messages</string>
    <string name="write_your_message">Write your message...</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="plate">Plate</string>
    <string name="claimid">ClaimID</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="describe_your_claim">Describe your claim</string>
    <string name="notification">Notification</string>
</resources>
